Fixes overflowing block background on editors

--- a/assets/scss/modules/leads-form.scss
+++ b/assets/scss/modules/leads-form.scss
@@ -10,7 +10,7 @@
     justify-content: center;
     margin-top: -3.75rem;
     margin-bottom: 3.75rem;
-    overflow: hidden; // Fixes blurring over neighbouring objects
+    overflow: hidden;// Fixes blurring over neighbouring objects
     @media only screen and (max-width: $leads--large) {
         height: auto;
         padding-bottom: 4.5rem;
@@ -28,6 +28,7 @@
         position: absolute;
         z-index: -1;
         // transform: scale(1.1);
+        overflow: hidden; //attmpting to hide the excesive bkg in editor
         will-change: filter, -webkit-filter;
         filter: blur(0);
         transition: filter 1.5s ease, -webkit-filter 1.5s ease;
@@ -557,12 +558,4 @@
     }
 }
 
-.leads-form
 
-// No fillwidth in admin
-.acf-block-preview {
-    .leads-form {
-        width: 100%;
-        margin-left: 0;
-    }
-}
